# ct-log

./: .gitignore  LICENSE  README.md  conda.yaml  pyproject.toml  requirements.txt
scripts/: compute_resolution.py  preprocess_dataset.py  visualize_dataset.py
src/dataset/: ct_log_dataset.py  ct_log_dataset_base.py  ct_log_mask_preprocessor.py
src/utils/: mask.py  metadata.py
