[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ct_log"
version = "0.0.1"
description = "Automatic CT Log analysis"
authors = [
  { name = "Marek Provaznik" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 100
src = ["ct_log"]
include = ["pyproject.toml", "ct_log/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ct_log"]
force-sort-within-sections = true

